--- a/src/containers/AudioPlayer/AudioPlayer.css
+++ b/src/containers/AudioPlayer/AudioPlayer.css
@@ -2,10 +2,11 @@
 .soundControls {
   display: inline-block;
   position: relative;
-  top: 0.5rem;
   font-family: Arial, Helvetica, sans-serif;
   color: grey;
+  font-size: 22px;
   float: left;
+  height: 4rem;
   text-align: left;
   width: 90%;
 }
@@ -25,13 +26,36 @@
   width: 40%;
   border: 1px solid #de1d2a;
   color: #de1d2a;
+  border-radius: 14px;
+  position: relative;
+  top: -7px;
+}
+
+.songInput{
+  border-radius: 14px;
+}
+
+#audioElem{
+  height: 2.6rem;
+  margin: 0.2rem 1rem;
+  position: relative;
+  top: 6px;
 }
 
 .audioDropdown {
   display: inline-block;
   width: 20rem;
   position: relative;
+  top: -8px;;;
   left: 1rem;
+}
+
+.floating.labeled.dropdown {
+  background: #cfcfcf00;
+  border: solid white 1px;
+  border-radius: 3px;
+  padding: 0.5rem;
+  margin: 0 0.5rem;
 }
 
 
@@ -50,13 +74,20 @@
 }
 
 .startButton {
-  border: solid 1px red !important;
-  background: black !important;
-  color: red !important;
-  position: absolute !important;
-  top: -1px !important;
-  height: 2rem !important;
-  line-height: 0px !important;
+  float: left;
+  height: 3rem;
+  color: #de1d2a;
+  background-color: #000000;
+  border-style: solid;
+  border-color: #de1d2a;
+  border-width: 1px;
+  border-radius: 12px;
+  position: relative;
+  top: 5px;
+}
+
+.audioClickpad {
+  position: relative;
 }
 
 .playIcon {
@@ -70,4 +101,5 @@
   top: -2px;
   left: -8px;
 }
+
 
