--- a/src/containers/AudioPlayer/AudioPlayer.css
+++ b/src/containers/AudioPlayer/AudioPlayer.css
@@ -4,26 +4,39 @@
   position: relative;
   font-family: Arial, Helvetica, sans-serif;
   color: grey;
-  font-size: 22px;
+  font-size: 20px;
   float: left;
   height: 4rem;
   text-align: left;
   width: 80%;
 }
 
+.rt{
+  display: inline-block;
+}
+
 .sketchCanvas {
   display: none;
 }
 
+.audioDropdown {
+  display: inline-block;
+  width: 25%;
+  position: relative;
+  top: -8px;
+  left: 1rem;
+}
+
+
 .fileControls {
 
   display: inline-block;
-  width: 80%;
+  width: 75%;
 }
 
 .songUpload {
   display: inline-block;
-  width: 40%;
+  width: 32%;
   border: 1px solid #de1d2a;
   color: #de1d2a;
   border-radius: 14px;
@@ -31,34 +44,43 @@
   top: -7px;
 }
 
-.songInput{
-  border-radius: 14px;
-}
-
 #audioElem{
   height: 2.6rem;
   margin: 0.2rem 1rem;
   position: relative;
   top: 6px;
-  width: 40%;
+  width: 32%;
 }
 
-.audioDropdown {
+.video-recorder {
   display: inline-block;
-  width: 20%;
   position: relative;
-  top: -8px;;;
-  left: 1rem;
+  top: -7px;
+  width: 32%;
 }
+
+#recorderButton{
+  border-radius: 20px;
+  height: 2.7rem;
+  width: 100%;
+}
+
+
+.songInput{
+  border-radius: 14px;
+}
+
+
 
 .floating.labeled.dropdown {
-  background: #cfcfcf00;
-  border: solid white 1px;
-  border-radius: 3px;
+  color:black;
+  background: white;
+  border: solid red 1px;
+  border-radius: 20px;
   padding: 0.5rem;
   margin: 0 0.5rem;
+  width: 7rem;
 }
-
 
 .playButton{
     display: inline-block !important;
