--- a/src/containers/AudioPlayer/AudioPlayer.css
+++ b/src/containers/AudioPlayer/AudioPlayer.css
@@ -1,5 +1,6 @@
 
 .soundControls {
+  margin: 0rem 2rem;
   display: inline-block;
   position: relative;
   font-family: Arial, Helvetica, sans-serif;
@@ -8,7 +9,7 @@
   float: left;
   height: 4rem;
   text-align: left;
-  width: 80%;
+  width: 90%;
 }
 
 .rt{
@@ -31,12 +32,12 @@
 .fileControls {
 
   display: inline-block;
-  width: 75%;
+  width: 100%;
 }
 
 .songUpload {
   display: inline-block;
-  width: 32%;
+  width: 25%;
   border: 1px solid #de1d2a;
   color: #de1d2a;
   border-radius: 14px;
@@ -49,7 +50,7 @@
   margin: 0.2rem 1rem;
   position: relative;
   top: 6px;
-  width: 32%;
+  width: 40%;
 }
 
 .video-recorder {
