--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif !important;
   background-color: black !important; 
+  position:fixed;
 }
 
 h1, h2, h3, h4, h5, h6 {
