--- a/src/containers/AudioPlayer/AudioPlayer.css
+++ b/src/containers/AudioPlayer/AudioPlayer.css
@@ -1,7 +1,6 @@
 
 .soundControls {
   margin: 0rem 2rem;
-  display: inline-block;
   position: relative;
   font-family: Arial, Helvetica, sans-serif;
   color: grey;
@@ -128,6 +127,10 @@
 
 @media (max-width : 320px) {
   .soundControls {display:none;}
+}
+
+@media (min-width : 320px) {
+  .soundControls {display:inline-block;}
 }
 
 
