added text editing

--- a/src/containers/SceneMenu/SceneMenu.css
+++ b/src/containers/SceneMenu/SceneMenu.css
@@ -56,3 +56,9 @@
 .sceneOptions {
   margin-bottom: 1rem;
 }
+
+.objectTitle {
+  display: inline-block;
+  margin-right: 1rem;
+  font-size: 16px;
+}
